# crypto-exercises

./: .gitignore  LICENSE  README.md
caesar/: Cargo.toml
caesar/src/: main.rs
caesar_cipher/: Cargo.toml
cbc/: Cargo.toml
cbc/src/: main.rs
ctr/: Cargo.toml
ctr/src/: main.rs
dlog/: CMakeLists.txt  main.c  main.cpp
dlog/include/: benchmark.c  benchmark.h
file-stream-signature/: CMakeLists.txt  main.cpp
mtp-attack/: Cargo.toml
mtp-attack/src/: main.rs
otp-attack-change/: Cargo.toml
otp-attack-change/src/: main.rs
padding-attack-example/: CMakeLists.txt  main.cpp
simple-ascii-xor/: CMakeLists.txt  main.cpp
stream/: Cargo.toml
stream-weak/: Cargo.toml
stream/src/: main.rs
two-round-feistel/: Cargo.toml
two-round-feistel/src/: main.rs
vigenere/: Cargo.toml
vigenere/src/: main.rs  main.rs.racertmp
